[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = "My First Poetry Project"
authors = ["fcalabro <francesco.calabro@nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
